--- a/openjdk8-fonts/Dockerfile
+++ b/openjdk8-fonts/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8-alpine
 
-RUN sed -i "s@http://dl-cdn.alpinelinux.org/@https://repo.huaweicloud.com/@g" /etc/apk/repositories && \
+RUN sed -i "s@http://dl-cdn.alpinelinux.org/@https://mirrors.aliyun.com/@g" /etc/apk/repositories && \
 	apk --no-cache add fontconfig ttf-dejavu
 
 ADD simsun.ttc /usr/share/fonts/ttf-dejavu/
