--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -1,8 +1,13 @@
 FROM openjdk:8-alpine
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
-	&& apk --no-cache add fontconfig ttf-dejavu
+ENV TZ Asia/Shanghai
 
-ADD simsun.ttc /usr/share/fonts/ttf-dejavu/
-ADD STSONG.TTF /usr/share/fonts/ttf-dejavu/
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
+	&& apk --no-cache add fontconfig ttf-dejavu tzdata \
+	&& cp /usr/share/zoneinfo/${TZ} /etc/localtime \
+	&& echo ${TZ} > /etc/timezone \
+	&& apk del tzdata
+
+ADD simsun.ttc /usr/share/fonts/ttf-dejavu/simsun.ttc
+ADD STSONG.TTF /usr/share/fonts/ttf-dejavu/STSONG.TTF
 
