--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -3,11 +3,9 @@ FROM debian:buster
 ENV TZ=Asia/Shanghai \
     DEBIAN_FRONTEND=noninteractive
 
-RUN apt install apt-transport-https ca-certificates
-
-ADD sources.list /etc/apt/sources.list
-
-RUN ln -fs /usr/share/zoneinfo/${TZ} /etc/localtime \
+RUN sed -i "s@http://deb.debian.org@http://mirrors.aliyun.com@g" /etc/apt/sources.list \
+    && sed -i "s@http://security.debian.org@http://mirrors.aliyun.com@g" /etc/apt/sources.list \
+    && ln -fs /usr/share/zoneinfo/${TZ} /etc/localtime \
     && echo ${TZ} > /etc/timezone \
     && dpkg-reconfigure --frontend noninteractive tzdata \
     && rm -rf /var/lib/apt/lists/*
