--- a/nginx-alpine/Dockerfile
+++ b/nginx-alpine/Dockerfile
@@ -1,9 +1,10 @@
 FROM nginx:1.20.1-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY ssl /etc/nginx/ssl
-COPY default_403.conf /etc/nginx/conf.d/default_403.conf
+COPY ssl/ /etc/nginx/ssl/
+COPY conf.d/ /etc/nginx/conf.d/
 COPY proxy.conf /etc/nginx/proxy.conf
+COPY deny.conf /etc/nginx/deny.conf
 
 ENV TZ Asia/Shanghai
 
