--- a/nginx-alpine/nginx.conf
+++ b/nginx-alpine/nginx.conf
@@ -14,9 +14,15 @@ http {
 	charset             utf-8;
 	server_tokens       off;
 
-	log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-		      '$status $body_bytes_sent "$http_referer" '
-		      '"$http_user_agent" "$http_x_forwarded_for"';
+	map $proxy_add_x_forwarded_for $client_real_ip{
+		'' $remote_addr;
+		~^(?P<firstAddr>[0-9\.]+),?.*$ $firstAddr;
+	}
+
+	log_format  main  '$remote_addr $http_host [$time_local] "$request" '
+			  '$status $body_bytes_sent "$http_referer" '
+			  '"$http_user_agent" "$client_real_ip" '
+			  '$request_time $upstream_response_time';
 
 	access_log  /var/log/nginx/access.log  main;
 
