--- a/nginx-alpine/conf.d/nginx_vhosts.conf
+++ b/nginx-alpine/conf.d/nginx_vhosts.conf
@@ -8,3 +8,10 @@ server {
 
     return 403;
 }
+
+#upstream Pr_Server{
+#	hash $client_real_ip;
+#	server 192.168.x.x   max_fails=1 fail_timeout=10s;
+#	server 192.168.x.x   max_fails=1 fail_timeout=10s;
+#	keepalive 256;
+#}
