--- a/nginx-alpine/nginx.conf
+++ b/nginx-alpine/nginx.conf
@@ -14,7 +14,7 @@ http {
 	charset             utf-8;
 	server_tokens       off;
 
-	map $proxy_add_x_forwarded_for $client_real_ip{
+	map $real_addr $client_real_ip{
 		'' $remote_addr;
 		~^(?P<firstAddr>[0-9\.]+),?.*$ $firstAddr;
 	}
@@ -40,6 +40,8 @@ http {
 	gzip_comp_level 2;
 	gzip_types       text/xml text/plain text/css application/javascript application/x-javascript application/rss+xml text/javascript image/tiff image/svg+xml application/json;
 	gzip_vary on;
+
+	expires 15m;
 
 	include             /etc/nginx/mime.types;
 	default_type        application/octet-stream;
