--- a/nginx-alpine/proxy.conf
+++ b/nginx-alpine/proxy.conf
@@ -1,3 +1,15 @@
-proxy_set_header Host $http_host;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header x-forwarded-for $proxy_add_x_forwarded_for;
+proxy_set_header Host $host;
+proxy_set_header X-Forwarded-For $real_addr;
+
+proxy_read_timeout 30s;
+proxy_send_timeout 30s;
+proxy_connect_timeout 30s;
+
+proxy_buffer_size 64k;
+proxy_buffers 32 32k;
+proxy_busy_buffers_size 128k;
+proxy_temp_file_write_size 64k;
+
+large_client_header_buffers 4 16k;
+client_max_body_size 300m;
+client_body_buffer_size 128k;
