--- a/nginx-alpine/Dockerfile
+++ b/nginx-alpine/Dockerfile
@@ -13,8 +13,7 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 	&& apk add --no-cache tzdata \
 	&& cp /usr/share/zoneinfo/${TZ} /etc/localtime \
 	&& echo ${TZ} > /etc/timezone \
-	&& apk del tzdata \
-	&& rm -f /etc/nginx/conf.d/default.conf
+	&& apk del tzdata
 
 EXPOSE 80
 
