--- a/nginx-alpine/nginx.conf
+++ b/nginx-alpine/nginx.conf
@@ -47,6 +47,7 @@ http {
 	default_type        application/octet-stream;
 
 	include /etc/nginx/nginx_vhosts.conf;
+	include /etc/nginx/deny.conf;
 	include /etc/nginx/conf.d/*.conf;
     
 }
