--- a/nginx-alpine/location.conf
+++ b/nginx-alpine/location.conf
@@ -8,7 +8,7 @@ if ($http_x_forwarded_for) {
 
 index index.html index.htm index.shtml index.php;
 
-include deny.conf;
+include /etc/nginx/deny.conf;
 
 location ~ /\.(hta|env) {
 	deny all;
