--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,5 @@ COPY deny.conf /etc/nginx/deny.conf
 ENV TZ Asia/Shanghai
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
-	&& apk add --no-cache tzdata \
 	&& cp /usr/share/zoneinfo/${TZ} /etc/localtime \
-	&& echo ${TZ} > /etc/timezone \
-	&& apk del tzdata
+	&& echo ${TZ} > /etc/timezone
