--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,6 +3,7 @@ FROM nginx:1.20.1-alpine
 COPY ssl/ /etc/nginx/ssl/
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY nginx_vhosts.conf /etc/nginx/nginx_vhosts.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
 COPY location.conf /etc/nginx/location.conf
 COPY proxy.conf /etc/nginx/proxy.conf
 COPY deny.conf /etc/nginx/deny.conf
