--- a/emqtt-bench/Dockerfile
+++ b/emqtt-bench/Dockerfile
@@ -2,10 +2,9 @@ FROM erlang:alpine
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
     && apk add --no-cache bash bash-doc bash-completion git make \
-    && rm -rf /var/cache/apk/* \
     && git clone https://github.com/emqx/emqtt-bench.git \
     && cd emqtt-bench \
-    && make
+    && ./rebar3 compile
 
 # RUN rebar3 compile
 CMD ["/bin/bash"]
