--- a/emqtt-bench/Dockerfile
+++ b/emqtt-bench/Dockerfile
@@ -1,10 +1,8 @@
-FROM erlang:alpine
+FROM erlang:22-alpine
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
     && apk add --no-cache bash bash-doc bash-completion git make \
     && git clone https://github.com/emqx/emqtt-bench.git \
-    && cd emqtt-bench \
-    && ./rebar3 compile
+    && cd emqtt-bench/ && make
 
-# RUN rebar3 compile
 CMD ["/bin/bash"]
