--- a/emqtt-bench/Dockerfile
+++ b/emqtt-bench/Dockerfile
@@ -1,8 +1,6 @@
-FROM erlang:22-alpine
+FROM erlang:24
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
-    && apk add --no-cache bash bash-doc bash-completion git make \
-    && git clone https://github.com/emqx/emqtt-bench.git \
+RUN git clone https://github.com/emqx/emqtt-bench.git \
     && cd emqtt-bench/ && make
 
 CMD ["/bin/bash"]
